tests/externInfo/dhrystone-exported/db/invalid/path/Func3.c.loc
68.20.0.10301 70.8.0.10305 71.8.0.10313 71.32.0.10327 